# ZipDiff

./: .gitignore  CITATION.cff  README.md
constructions/: .gitignore  inconsistency-types.json
parsers/: .gitignore  README.md  parallel-unzip-all.sh  parsers.json  prepare.sh  run.sh  testcase.sh  unzip-all.sh
parsers/01-infozip/: unzip
parsers/02-7zip/: Dockerfile
parsers/03-p7zip/: Dockerfile
parsers/04-winrar/: Dockerfile  unzip
parsers/05-ada-zip-ada/: unzip
parsers/06-c-go-unarr/: Dockerfile  unzip
parsers/07-c-libarchive/: Dockerfile  unzip
parsers/08-c-libzip/: unzip.php
parsers/09-c-minizip/: Dockerfile
parsers/10-c-minizip-ng/: Dockerfile
parsers/11-c-zip/: unzip.c
parsers/12-c-zziplib/: Dockerfile  unzip
parsers/14-csharp-sharpcompress/: Dockerfile  unzip.cs
parsers/15-csharp-sharpziplib/: Dockerfile
parsers/16-csharp-system-io-compression/: Dockerfile  unzip.cs
tools/: ablation-study.sh  fuzz-stats.py  inconsistency-table.py  parsers-to-table.py  prepare.sh  run-parsers.sh
zip-diff/: Cargo.toml
zip-diff/src/: cdh.rs  compress.rs  dd.rs  eocd.rs  extra.rs  fields.rs  hash.rs  lfh.rs  lib.rs  utils.rs  zip.rs
zip-diff/src/construction/: a.rs  b.rs  c.rs  main.rs  utils.rs
zip-diff/src/construction/a/: a1.rs  a2.rs  a3.rs  a4.rs  a5.rs
zip-diff/src/construction/b/: b1.rs  b2.rs  b3.rs  b4.rs
zip-diff/src/construction/c/: c1.rs  c2.rs  c3.rs  c4.rs  c5.rs
zip-diff/src/count/: main.rs
zip-diff/src/fuzz/: config.rs  corpus.rs  execute.rs  feature.rs  generate.rs  main.rs  mutation.rs  rand_utils.rs  result.rs  stats.rs
(+89 files in other folders)
