[package]
name = "zip-diff"
version = "0.1.0"
edition = "2021"
description = "Differential fuzzing for ZIP parsers."
license = "Apache-2.0"
default-run = "fuzz"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
binwrite = "0.2.1"
bitflags = "2.4.1"
blake3 = { version = "1.5.4", features = ["rayon", "mmap"] }
byteorder = "1.5.0"
bzip2 = "0.4.4"
chrono = { version = "0.4.38", default-features = false, features = ["now"] }
clap = { version = "4.5.36", features = ["derive"] }
crc32fast = "1.3.2"
downcast-rs = "1.2.0"
dyn-clone = "1.0.16"
educe = { version = "0.5.11", default-features = false, features = ["Debug", "Default"] }
fixedbitset = "0.5.7"
flate2 = "1.0.28"
fs4 = "0.13.1"
itertools = "0.13.0"
lzma-rs = "0.3.0"
num-traits = "0.2.19"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sysinfo = { version = "0.34.2", default-features = false, features = ["system"] }
tar = "0.4.42"
vec_box = "1.0.0"
walkdir = "2.5.0"
zip_structs = "0.2.1"
zstd = { version = "0.13.2", features = ["zstdmt"] }

[[bin]]
name = "fuzz"
path = "src/fuzz/main.rs"
